--- a/style.css
+++ b/style.css
@@ -8,3 +8,5 @@ git status
 git commit
 git config --global user.email "gmorenogabriel@gmail.com"
 git config --global user.name "gmoreno@gmail.com"
+git commit           ---<Agregar linea de comentario inicial>---
+git restore <file>   ---<Volvemos al arhivo original<---
