--- a/style.css
+++ b/style.css
@@ -9,5 +9,6 @@ git commit
 git config --global user.email "gmorenogabriel@gmail.com"
 git config --global user.name "gmoreno@gmail.com"
 git commit           ---<Agregar linea de comentario inicial>---
+git commit -m "Cuarta modificacion agregue .gitignore"
 git restore <file>   ---<Volvemos al arhivo original>---
 git diff    <file>
